[gd_scene load_steps=5 format=2]

[ext_resource path="res://font/bold_font.tres" type="DynamicFont" id=1]
[ext_resource path="res://GUI/water_logo.png" type="Texture" id=2]
[ext_resource path="res://GUI/info_construct/sprite/info_construct_fluffisprout_bg.png" type="Texture" id=3]
[ext_resource path="res://GUI/gender_choice.gd" type="Script" id=4]

[node name="gender_choice" type="Node2D"]
script = ExtResource( 4 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="male_button" type="TextureButton" parent="."]
margin_left = 128.0
margin_top = 16.0
margin_right = 168.0
margin_bottom = 56.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="male_button"]
margin_left = 48.0
margin_top = 8.0
margin_right = 109.0
margin_bottom = 36.0
custom_fonts/font = ExtResource( 1 )
text = "male"

[node name="female_button" type="TextureButton" parent="."]
margin_left = 128.0
margin_top = 72.0
margin_right = 168.0
margin_bottom = 112.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="female_button"]
margin_left = 48.0
margin_top = 8.0
margin_right = 133.0
margin_bottom = 36.0
custom_fonts/font = ExtResource( 1 )
text = "female"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="male_button" to="." method="_on_male_button_pressed"]
[connection signal="pressed" from="female_button" to="." method="_on_female_button_pressed"]
